# ai_counseling_assistant

./: .gitignore  PLAN_WINDOWS_TTS_TEST.md  README.md  config.py  debug_torch.py  main.py  pyproject.toml  requirements.txt  sanity_check.py  test_pydantic_integration.py
core/: asr_providers.py  audio_capture.py  audio_test.py  dual_capture.py  llm_engine.py  llm_models.py  llm_providers.py  session_storage.py  transcriber.py
output_transcription/: README.md  record_benchmark.py  transcribe_output.py  transcribe_output_backup.py
prompts/: counseling_system.txt  proofread_asr.txt  session_summary.txt  visitor_profile.txt
sessions/20251231152903/: 2025-12-31_15-47.json
sessions/mock_visitor_20251231/: 2025-12-31_18-13.json
tests/: check_duplex.py  check_samplerate.py  run_listener.py  simulate_background_listener.py  simulate_foreground_player.py  test_azure_asr.py  test_chinese_tts_capture.py  test_components.py  test_cumulative_profile.py  test_device_input.py  test_dual_capture.py  test_long_transcription.py  test_model_only.py  test_playback_only.py  test_save_format.py  test_shared_mic.py
ui/: components.py  st_components.py  st_session.py  streamlit_app.py
