[project]
name = "ai-counseling-assistant"
version = "0.1.0"
description = "AI-powered counseling copilot with real-time transcription and suggestions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "nicegui",
    "faster-whisper",
    "funasr",
    "openai",
    "soundcard",
    "sounddevice",
    "numpy",
    "torch",
    "python-dotenv",
    "pywin32",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
# Main Streamlit app
app = "streamlit.web.cli:main"

# Run commands directly:
#   uv run streamlit run ui/streamlit_app.py  - Start main app
#   uv run ruff check .                       - Lint code
#   uv run ruff format .                      - Format code

[tool.uv]
# Override transitive dependencies that don't support Python 3.10+
override-dependencies = [
    "numba>=0.56.0",
    "llvmlite>=0.39.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
